--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,11 @@
 {
   "dependencies": {
+    "com.homemade.core": "1.0.0",
+    "com.homemade.leanpool": "2.0.2",
+    "com.homemade.modules.audio": "1.1.0",
+    "com.homemade.pattern.observer": "1.0.1",
+    "com.homemade.save.core": "1.0.2",
+    "com.homemade.utils.asset-overwriter": "1.0.0",
     "com.unity.collab-proxy": "2.7.1",
     "com.unity.feature.2d": "2.0.0",
     "com.unity.ide.rider": "3.0.28",
@@ -40,5 +46,14 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  }
+  },
+  "scopedRegistries": [
+    {
+      "name": "homemade",
+      "url": "https://package.openupm.com",
+      "scopes": [
+        "com.homemade"
+      ]
+    }
+  ]
 }
